updated startAT to contain date
